--- a/GRAH-SAJJA.html
+++ b/GRAH-SAJJA.html
@@ -33,7 +33,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="GRAH-SAJJA.html" data-home-page-title="GRAH SAJJA" class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-sticky u-sticky-e3ce u-header" id="sec-435e"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-sticky u-sticky-e3ce u-header" id="sec-435e"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="GRAH-SAJJA.html" data-page-id="2152103902" class="u-image u-logo u-image-1" data-image-width="2284" data-image-height="295" title="Home">
           <img src="images/WEBSITE.png" class="u-logo-image u-logo-image-1">
         </a>
