--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-sticky u-sticky-e3ce u-header" id="sec-435e"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="Home.html" data-page-id="2152103902" class="u-image u-logo u-image-1" data-image-width="2284" data-image-height="295" title="Home">
+        <a href="GRAH-SAJJA.html" data-page-id="2152103902" class="u-image u-logo u-image-1" data-image-width="2284" data-image-height="295" title="Home">
           <img src="images/WEBSITE.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1">
