--- a/Contact.html
+++ b/Contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;">
+<html style="font-size: 16px;" lang="en-IN">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Grahsajja, grah sajja, grah sajja udaipur, grahsajja udaipur, home decor udaipur, udaipur, Curtains, Sofas, sofa covers, bedsheets, quilts, duets, roman curtain, roller blind, zebra blind, mattresses, home decor, interior, interior design, home makeover, decor renovation, interior designing">
+    <meta name="description" content="Grah Sajja Udaipur is an upholstery fabric retail store which sells curtains, sofa fabric, sofa covers, bed sheets, bed linen, quilts, duets, roman curtain, roller blind, zebra blind etc. We also sell customized mattresses and sofas. We provide home decor services for curtains, sofas and other products including installations and customized services as well.">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Contact</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -18,12 +18,12 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Grah Sajja",
+		"name": "Grah Sajja Udaipur",
 		"logo": "images/WEBSITE.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Contact">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Grah Sajja Udaipur is an upholstery fabric retail store which sells curtains, sofa fabric, sofa covers, bed sheets, bed linen, quilts, duets, roman curtain, roller blind, zebra blind etc. We also sell customized mattresses and sofas. We provide home decor services for curtains, sofas and other products including installations and customized services as well.">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-sticky u-sticky-e3ce u-header" id="sec-435e"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
