--- a/Home.html
+++ b/Home.html
@@ -26,7 +26,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Grah Sajja",
-		"logo": "images/WEBSITE.png"
+		"logo": "https://github.com/rishitmehta/Grahsajja/blob/main/images/WEBSITE.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
