--- a/GRAH-SAJJA.html
+++ b/GRAH-SAJJA.html
@@ -29,7 +29,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Grah Sajja Udaipur",
-		"logo": "images/WEBSITE.png"
+		"logo": "https://grahsajja.co.in/images/WEBSITE.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:type" content="website">
