--- a/Home.html
+++ b/Home.html
@@ -26,6 +26,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Grah Sajja",
+    "url" : "https://grahsajja.co.in",
 		"logo": "https://grahsajja.co.in/images/logo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
