--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Grah Sajja Udaipur",
+    "url" : "https://grahsajja.co.in",
 		"logo": "https://grahsajja.co.in/images/logo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
