--- a/Contact.html
+++ b/Contact.html
@@ -19,6 +19,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Grah Sajja Udaipur",
+    "url" : "https://grahsajja.co.in",
 		"logo": "images/WEBSITE.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
